/*
 * Copyright 2020 Actyx AG
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
import { action } from '@storybook/addon-actions';
import { storiesOf } from '@storybook/react';
import { hostDecorator } from '../../utils';
import * as React from 'react';
import { Toolbar } from './Toolbar';
import { Typography } from '../Typography';
import { Button } from '../Button';
import { common } from '../../colors';

const onClick = action('onClick');

storiesOf('Components/Toolbar', module)
  .addDecorator(hostDecorator({}))
  .add('Variant light content', () => (
    <Toolbar variant="light">
      <Typography variant="distance">Title</Typography>
    </Toolbar>
  ))
  .add('Variant light content/icons', () => (
    <Toolbar variant="light">
      <Button variant="flat" color="transparent" icon="rotate_left" onClick={onClick} />
      <Button variant="flat" color="transparent" icon="rotate_right" onClick={onClick} />
      <Button variant="flat" color="transparent" icon="refresh" onClick={onClick} />
    </Toolbar>
  ))
  .add('Variant dark content', () => (
    <Toolbar variant="dark">
      <Typography variant="distance" color={common.white}>
        Title
      </Typography>
    </Toolbar>
  ));
